--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                   <a class="nav-link ps-2 d-flex cursor-pointer align-items-center font-weight-bold" id="dropdownMenuPages" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="material-icons opacity-6 me-2 text-md"></i>
                     Accounts
-                    <img src="img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-auto ms-md-2">
+                    <img src="down-arrow-dark.svg" alt="down-arrow" class="arrow ms-auto ms-md-2">
                   </a>
                   <div class="dropdown-menu dropdown-menu-animation ms-n3 dropdown-md p-3 border-radius-xl mt-0 mt-lg-3" aria-labelledby="dropdownMenuPages">
                     <div class="d-none d-lg-block">
@@ -110,7 +110,7 @@
               </div>
               <div class="col-md-4 position-relative">
                 <div class="p-3 text-center">
-                  <h1 class="text-gradient text-primary"><!-- <span id="state2" countTo="15"></span>50 -->50+</h1>
+                  <h1 class="text-gradient text-primary">50+</h1>
                   <h5 class="mt-3">Delicacies</h5>
                   <p class="text-sm font-weight-normal">Try our rich mouth-watering menu collated from every country we mark our presence in.</p>
                 </div>
